Updated with proxy and listen ports

--- a/config/reverse_proxy.conf
+++ b/config/reverse_proxy.conf
@@ -1,10 +1,10 @@
 server {
-  listen 80;
-  listen [::]:80;
+  listen LISTEN_PORT;
+  listen [::]:LISTEN_PORT;
 
   server_name SERVNAME;
 
   location / {
-      proxy_pass DOMAIN;
+      proxy_pass http://DOMAIN:PROXY_PORT;
   }
 }
